examples/test/testpolicy1009.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1009
  namespace: namespace496
spec:
  podSelector:
    matchLabels:
      key1: value33
      key6: value48
      key21: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value35
          key29: value46
          key49: value13
      podSelector:
        matchLabels:
          key8: value30
